[gd_scene load_steps=10 format=3 uid="uid://dswee26hnmi1c"]

[ext_resource type="Script" uid="uid://btakwqdwhlydw" path="res://scripts/zwischenseq_1.gd" id="1_c3oco"]
[ext_resource type="FontFile" uid="uid://b0b1gnpcewoxk" path="res://res/CONSOLAB.TTF" id="2_s0x26"]
[ext_resource type="FontFile" uid="uid://modbqwkkpyfv" path="res://res/CONSOLA.TTF" id="3_c46cf"]
[ext_resource type="Texture2D" uid="uid://bdwfy02ea8fyb" path="res://res/pseudocode_kohmi.png" id="4_r3fhw"]
[ext_resource type="Texture2D" uid="uid://dfnnwrymuid5j" path="res://res/plakat_kohmi_groe_Hand4K_final.png" id="5_6si2d"]
[ext_resource type="VideoStream" uid="uid://rat0hrdbpfu7" path="res://res/Animations/Cycles-kohmi-wave.ogv" id="6_s0x26"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1y6a"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_080af"]
size = Vector2(1156, 650)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_s0x26"]
color = Color(0, 0.705882, 0, 1)
thickness = 4

[node name="zwischenseq_1" type="Node2D"]
script = ExtResource("1_c3oco")

[node name="Panel" type="Panel" parent="."]
offset_left = -597.0
offset_top = -339.0
offset_right = 604.0
offset_bottom = 352.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k1y6a")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_080af")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
clip_contents = true
offset_left = -575.0
offset_top = -402.0
offset_right = 577.0
offset_bottom = 246.0
mouse_filter = 2
stream = ExtResource("6_s0x26")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -568.0
offset_top = 159.0
offset_right = 554.0
offset_bottom = 312.0
theme_override_constants/separation = 5

[node name="Sprecher" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.737255, 0, 1)
theme_override_fonts/font = ExtResource("2_s0x26")
theme_override_font_sizes/font_size = 21
text = "Kohmi"

[node name="Label" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0.737255, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_c46cf")
theme_override_font_sizes/normal_font_size = 21
text = "Wie heißt du eigentlich?"
fit_content = true

[node name="PseudocodeKohmi" type="Sprite2D" parent="."]
position = Vector2(-475, 84)
scale = Vector2(0.730337, 0.730337)
texture = ExtResource("4_r3fhw")

[node name="PlakatKohmiGroeHand4kFinal" type="Sprite2D" parent="."]
visible = false
position = Vector2(45, -70)
scale = Vector2(0.228241, 0.228241)
texture = ExtResource("5_6si2d")

[node name="player_name_container" type="HBoxContainer" parent="."]
visible = false
offset_left = -461.0
offset_top = 236.0
offset_right = -241.0
offset_bottom = 276.0

[node name="Label" type="Label" parent="player_name_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_c46cf")
theme_override_font_sizes/font_size = 21
text = "Ich heiße:"

[node name="LineEdit" type="LineEdit" parent="player_name_container"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_c46cf")
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxLine_s0x26")
placeholder_text = "Name"

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -598.0
offset_top = -352.0
offset_right = 625.0
offset_bottom = 366.0
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="editing_toggled" from="player_name_container/LineEdit" to="." method="_on_line_edit_editing_toggled"]
[connection signal="text_submitted" from="player_name_container/LineEdit" to="." method="_on_line_edit_text_submitted"]
